// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display tag with custom element 1`] = `
<DocumentFragment>
  <div
    class="css-82qlwu"
    data-chakra-component="CBox"
  >
    <div
      class="css-bq4nt5"
      data-chakra-component="CTag"
    >
      <div
        class="css-1kvyzeh"
        data-chakra-component="CAvatar"
      >
        <div
          aria-label="Mesut Koca"
          class="css-1nx39wu"
          data-chakra-component="CAvatarName"
        >
          MK
        </div>
      </div>
       
      <span
        class="css-12hz31w"
        data-chakra-component="CTagLabel"
      >
        Mesut
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should display tag with right icon 1`] = `
<DocumentFragment>
  <div
    class="css-82qlwu"
    data-chakra-component="CBox"
  >
    <div
      class="css-1h7p6x3"
      data-chakra-component="CTag"
    >
      <span
        class="css-12hz31w"
        data-chakra-component="CTagLabel"
      >
        Green
      </span>
       
      <svg
        class="css-12j51pv css-xmst1h css-dp0f2t css-9r03b"
        data-chakra-component="CTagIcon"
        role="presentation"
        viewBox="0 0 24 24"
      >
        
    
        <path
          d="M0,12a1.5,1.5,0,0,0,1.5,1.5h8.75a.25.25,0,0,1,.25.25V22.5a1.5,1.5,0,0,0,3,0V13.75a.25.25,0,0,1,.25-.25H22.5a1.5,1.5,0,0,0,0-3H13.75a.25.25,0,0,1-.25-.25V1.5a1.5,1.5,0,0,0-3,0v8.75a.25.25,0,0,1-.25.25H1.5A1.5,1.5,0,0,0,0,12Z"
          fill="currentColor"
        />
        
    
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  <div
    class="css-82qlwu"
    data-chakra-component="CBox"
  >
    <div
      class="css-1h7p6x3"
      data-chakra-component="CTag"
    >
      <svg
        class="css-12j51pv css-xmst1h css-dp0f2t css-9r03b"
        data-chakra-component="CTagIcon"
        role="presentation"
        viewBox="0 0 24 24"
      >
        
    
        <path
          d="M0,12a1.5,1.5,0,0,0,1.5,1.5h8.75a.25.25,0,0,1,.25.25V22.5a1.5,1.5,0,0,0,3,0V13.75a.25.25,0,0,1,.25-.25H22.5a1.5,1.5,0,0,0,0-3H13.75a.25.25,0,0,1-.25-.25V1.5a1.5,1.5,0,0,0-3,0v8.75a.25.25,0,0,1-.25.25H1.5A1.5,1.5,0,0,0,0,12Z"
          fill="currentColor"
        />
        
    
      </svg>
       
      <span
        class="css-12hz31w"
        data-chakra-component="CTagLabel"
      >
        Green
      </span>
    </div>
  </div>
</DocumentFragment>
`;
